# ceinmsrt-plugin-delsys-cpp

./: CMakeLists.txt  README.md  executionEMG_ankle_knee.xml  subjectMTUCalibrated.xml
src/: CMakeLists.txt  EMGDelsysSwig.i  EMG_Delsys.cpp  EMG_Delsys.h  Win32SdkSample.cpp  test.cpp
